added info bubbles for method

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -596,7 +596,7 @@ targeted_participants_placeholder=Identify up to 3 recruited groups
 ##7.Process
 process=Process
 process_methods=Methods
-process_methods_instructional=What methods were used in this case? Type to select methods that already exist in Participedia. For new methods, first publish this case to save your work then publish a new method. To add your new method, return to edit this case.
+process_methods_instructional_case=What methods were used in this case? Type to select methods that already exist in Participedia. For new methods, first publish this case to save your work then publish a new method. To add your new method, return to edit this case.
 process_methods_placeholder=Type to search & generate possible database matches
 legality=Legality
 legality_instructional=Is the overall method used in this case considered legal by judicial authorities?
@@ -625,7 +625,7 @@ insights_outcomes_placeholder=How were insights & outcomes communicated?
 ##8.Organizers & Supporters
 organizers_supporters=Organizers & Supporters
 primary_organizer=Primary organizer / manager
-primary_organizer_instructional=Who was primarily responsible for organizing / managing the initiative? Type to select name of any organization that already exists on Participedia. For new organizations, first publish this case to save your work then publish a new organization. To add your new organization, return to edit this case.
+primary_organizer_instructional_case=Who was primarily responsible for organizing / managing the initiative? Type to select name of any organization that already exists on Participedia. For new organizations, first publish this case to save your work then publish a new organization. To add your new organization, return to edit this case.
 primary_organizer_placeholder=Type to search & generate possible database matches
 organizer_types=Type of organizer / manager
 organizer_types_instructional=Select up to three types of organizers or managers.
@@ -1277,13 +1277,19 @@ governance_contribution_instructional=Select Governance contribution
 issue_interdependency=Issue Interdependency
 issue_interdependency_instructional=What level of issue interdependency can the method handle?
 issue_interdependency_placeholder=Select Issue interdependency
+issue_interdependency_box_title=Issue Interdependency
+issue_interdependency_box_text=Issues may be relatively discrete and can be addressed in isolation from other issues. An example would be a neighborhood decision about appropriate playground equipment for a park. Or issues can be highly interdependent. An example would be global climate change, which involves environmental, economic, cultural, and justice issues.
 issue_polarization=Issue Polarization
 issue_polarization_instructional=What level of issue polarization can the method handle? 
+issue_polarization_box_title=Issue Polarization
+issue_polarization_box_text=The lowest polarization exists when the process can assume basic agreement on goals. The high polarization exists when participants enter the process with long-standing animosities and low trust.
 issue_polarization_placeholder=Select Issue polarization
 issue_technical_complexity=Issue Technical Complexity
 issue_technical_complexity_instructional=What level of technical complexity can the method handle? 
+issue_technical_complexity_box_title=Issue Technical Complexity
+issue_technical_complexity_box_text=An example of low technical complexity might be resolution of a neighborhood dispute. An example of high complexity would be heath care system reform or global climate change.
 issue_technical_complexity_placeholder=Select Issue technical complexity
-method_of_interaction=Method of Interaction
+method_of_interaction=Public Interaction Method
 method_of_interaction_instructional=How are processes and their results communicated to broader publics? 
 method_of_interaction_placeholder=Select public interaction method
 public_interaction_method=Public Interaction Method
@@ -1366,15 +1372,15 @@ agenda_formation=Agenda Formation
 4_quite_complex=4 - Quite Complex
 2_not_very_complex=2 - Not Very Complex
 other=Other
-community_building_eg_social_capital=Community building (e.g. social capital)
-collaborative_delivery_of_services_with_public_authorities=Collaborative delivery of services with public authorities
-protest=Protest
 consultation_ie_to_advise_decision_makers=Consultation (i.e. to advise decision makers)
-develop_individual_capacities_eg_skills_learning=Develop individual capacities (e.g. skills, learning)
-direct_delivery_of_public_services_ie_by_entities_other_than_government=Direct delivery of public services (i.e. by entities other than government)
 cogovernance_ie_to_share_decision_making_with_public_authorities=Co-governance (i.e. to share decision making with public authorities)
 make_public_decisions_ie_exert_direct_authority=Make public decisions (i.e. exert direct authority)
+direct_delivery_of_public_services_ie_by_entities_other_than_government=Direct delivery of public services (i.e. by entities other than government)
+collaborative_delivery_of_public_services_with_public_authorities=Collaborative delivery of public services with public authorities
 raise_public_awareness=Raise public awareness
+community_building_eg_social_capital=Community building (e.g. social capital)
+develop_individual_capacities_eg_skills_learning=Develop individual capacities (e.g. skills, learning)
+protest=Protest
 online_voting=Online Voting
 plenary_and_group_sessions=Plenary and group sessions
 facetoface=Face-to-face
@@ -1828,8 +1834,15 @@ informal_social_activities=Informal Social Activities
 listen_watch_as_spectator=Listen/watch as spectator
 negotiation_bargaining=Negotiation & Bargaining
 no_interaction_among_participants=No interaction among participants
+discussion_dialogue_or_deliberation=Discussion, Dialogue or Deliberation
+negotiate_bargain=Negotiate & Bargain
+express_opinions_preferences_only=Express opinions/preferences only
+listen_watch_as_spectator=Listen/watch as spectator
+acting_drama=Acting/Drama
+formal_testimony=Formal Testimony
 storytelling=Story-Telling
-teaching_instructing=Teaching/instructing
+informal_social_activities=Informal Social Activities
+organized_demonstrations=Organized Demonstrations
 ###learning_resources
 expert_presentations=Expert presentations
 participant_presentations=Participant presentations
@@ -1916,7 +1929,7 @@ evaluation_links_placeholder=Provide a link to a evaluation report here.
 components=Components
 components_intro=Some cases of public participation can be viewed as “components” of a single, overarching case. Any case can have multiple components, but can only be labeled as a component of a single case. 
 has_components=Add components to this case
-has_components_instructional=A case can have multiple components, but they must already be published cases on Participedia. Type to search for an existing case in Participedia to label it as a component of this case. Select one or more.
+has_components_instructional_case=A case can have multiple components, but they must already be published cases on Participedia. Type to search for an existing case in Participedia to label it as a component of this case. Select one or more.
 has_components_placeholder=Search for existing case/component
 is_component_of=Make this case a component of another case
 is_component_of_instructional=A case can only be a component of one other case, and the other case must already be published on Participedia. Type to search for an existing case in Participedia to label this case as a component of it. Select one. 
