before dropping MethodEditor fields

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -587,9 +587,9 @@ number_of_participants_placeholder=How many people participated?
 open_limited=Open to all or limited to some?
 open_limited_instructional=Was this open to all or limited to a subset of the population?
 open_limited_placeholder=Was this open to all or limited to a subset of the population?
-recruitment_method=Recruitment Method
-recruitment_method_instructional=If relevant to this case, select the method used to recruit a limited subset of the population
-recruitment_method_placeholder=Select recruitment method
+recruitment_method_case=Recruitment Method
+recruitment_method_case_instructional=If relevant to this case, select the method used to recruit a limited subset of the population
+recruitment_method_case_placeholder=Select recruitment method
 targeted_participants=Targeted Participants 
 targeted_participants_instructional=Select up to three of the most heavily recruited groups.
 targeted_participants_placeholder=Identify up to 3 recruited groups
@@ -706,7 +706,9 @@ targeted_audience=Targeted audience
 targeted_audience_instructional=Select targeted audience
 participant_selection=Participant selection
 participant_selection_instructional=How are participants typically recruited?
-participant_selection_placeholder=Select recruitment method
+participant_selection_placeholder=Was this open to all, or limited to some?
+participant_selection_box_title=Participant selection
+participant_selection_box_text=Example of a targeted recruiting effort could be community organizing to recruit low-income earners.
 type_of_funding_entity=Type of funding entity
 type_of_funding_entity_instructional=Select type of funding entity
 updated_date=Updated date
@@ -719,14 +721,14 @@ general_issues_instructional=Select an issue
 issues_instructional=Select an issue
 issues_placeholder=Select & rank up to 3 issues
 #Method.js
-kind_of_influence=Kind of influence
-kind_of_influence_instructional=What kind of decision making influence does this method typically have?
-kind_of_influence_placeholder=Select kind of influence
+typical_purposes=Typical Purpose(s)
+typical_purposes_instructional=For what purpose is this method typically used?
+typical_purposes_placeholder=Select & rank up to 3 purposes
 communication_with_audience=Communication with audience
 communication_with_audience_instructional=Select a communication with audience
-decision_method=Decision method
-decision_method_instructional=How are decisions typically made? 
-decision_method_placeholder=Select decision method
+decision_method=Decision Method
+decision_method_instructional=How are group decisions typically made?  
+decision_method_placeholder=How are group decisions made?
 decision_method_method=Decision Method
 decision_method_method_instructional=How are decisions typically made? 
 decision_methods_placeholder=How were group decisions made?
@@ -734,9 +736,9 @@ face_to_face_online_or_both=Face-to-face, online or both
 facetoface_online_or_both_instructional=Did participants interact face-to-face, online, or both?
 facetoface_online_or_both_placeholder=Was interaction face-to-face or online?
 facilitated=Facilitated
-communication_mode=Communication Mode
-communication_mode_instructional=What is the primary purpose of communication within the process? 
-communication_mode_placeholder=Select communication mode
+interaction_modes=Type(s) of Interaction among Participants
+interaction_modes_instructional=Select and rank up to three of the most often used types of interaction
+interaction_modes_placeholder=Select & rank up to 3 types of interaction
 governance_contribution=Governance Contribution
 governance_contribution_placeholder=Select governance contribution
 typical_funding_source=Typical funding source
@@ -1243,7 +1245,6 @@ classification=Classification
 consultation_ie_to_advise_decision_makers=Consultation (i.e. to advise decision makers)
 cogovernance_ie_to_share_decision_making_with_public_authorities=Co-governance (i.e. to share decision making with public authorities)
 make_public_decisions_ie_exert_direct_authority=Make public decisions (i.e. exert direct authority)
-participant_selection=Participant Selection 
 open_to_all=Open to all
 open_to_all_with_targeted_recruitment=Open to all with targeted recruitment
 random_selection=Random selection
@@ -1259,6 +1260,9 @@ national=National
 international=International
 governance_contribution_method_instructional=What is the primary governance contributions of the method?
 links_placeholder_method=Add a link
+recruitment_method_method=Recruitment method for limited subset of population
+recruitment_method_method_instructional=If relevant to this method, select the recruitment process typically used to select a subset of the population.
+recruitment_method_method_placeholder=Select recruitment method
 ###########################
 ###OrganizationEditor.js###
 ###########################
@@ -1276,22 +1280,37 @@ best_for_placeholder=Select best use
 governance_contribution_instructional=Select Governance contribution
 issue_interdependency=Issue Interdependency
 issue_interdependency_instructional=What level of issue interdependency can the method handle?
-issue_interdependency_placeholder=Select Issue interdependency
+issue_interdependency_placeholder=Select level of issue interdependency
 issue_interdependency_box_title=Issue Interdependency
 issue_interdependency_box_text=Issues may be relatively discrete and can be addressed in isolation from other issues. An example would be a neighborhood decision about appropriate playground equipment for a park. Or issues can be highly interdependent. An example would be global climate change, which involves environmental, economic, cultural, and justice issues.
 issue_polarization=Issue Polarization
 issue_polarization_instructional=What level of issue polarization can the method handle? 
 issue_polarization_box_title=Issue Polarization
 issue_polarization_box_text=The lowest polarization exists when the process can assume basic agreement on goals. The high polarization exists when participants enter the process with long-standing animosities and low trust.
-issue_polarization_placeholder=Select Issue polarization
+issue_polarization_placeholder=Select level of issue polarization
 issue_technical_complexity=Issue Technical Complexity
 issue_technical_complexity_instructional=What level of technical complexity can the method handle? 
 issue_technical_complexity_box_title=Issue Technical Complexity
 issue_technical_complexity_box_text=An example of low technical complexity might be resolution of a neighborhood dispute. An example of high complexity would be heath care system reform or global climate change.
-issue_technical_complexity_placeholder=Select Issue technical complexity
-method_of_interaction=Public Interaction Method
-method_of_interaction_instructional=How are processes and their results communicated to broader publics? 
-method_of_interaction_placeholder=Select public interaction method
+issue_technical_complexity_placeholder=Select level of technical complexity
+#communication_outcomes
+communication_outcomes=Communication of Insights and Outcomes
+communication_outcomes_instructional=How are the insights and outcomes from this method typically communicated to the intended audiences?
+communication_outcomes_placeholder=Select typical method of communication
+communication_outcomes_box_title=Communication of Insights and Outcomes
+communication_outcomes_box_text=<p>Examples of Artistic Expression include political rap, street theater, etc.</p><p>Examples of Traditional Media include television, radio, newspapers, etc.</p><p>Examples of New Media include social media, blogging, texting, etc.</p><p>Independent Media is media that is free of corporate or government influence.</p><p>Example of a Minority Report could be a dissenting opinion.</p>
+artistic_expression=Artistic Expression
+traditional_media=Traditional Media
+new_media=New Media
+independent_media=Independent Media
+public_report=Public Report
+minority_report=Minority Report
+petitions=Petitions
+protests_public_demonstrations=Protests/Public Demonstrations
+public_hearings_meetings=Public Hearings/Meetings
+word_of_mouth=Word of Mouth
+not_applicable=Not Applicable
+#public_interaction_method
 public_interaction_method=Public Interaction Method
 public_interaction_method_instructional=Select Public interaction method
 public_interaction_method_placeholder=Select public interaction method
