--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -668,10 +668,10 @@ preferential=Preferential
 supermajority=Supermajority
 consensus=Consensus
 #Case.js
-specific_topic=Specific topic
+specific_topics=Specific topics
 voting=Voting
 facetoface_online_or_both=Face-to-face, online or both
-issues=Issue
+issues=Issues
 general_issues=General Issues
 who_was_primarily_responsible_for_organizing_the_initiative=Who was primarily responsible for organizing the initiative
 number_of_meeting_days=Number of meeting days
@@ -1216,8 +1216,8 @@ method_title_label=Title of Method
 method_title_explanatory=Give this method a descriptive title in 10 words or less.
 method_body_title=Method Description / Narrative
 method_title_placeholder=Enter title in 10 words or less
-method_brief_description_explanatory=Enter tweet-length (140 characters or less) description of this method.
-method_brief_description_placeholder=Enter tweet-length case description
+method_description_explanatory=Enter tweet-length (140 characters or less) description of this method.
+method_description_placeholder=Enter tweet-length case description
 method_description_instructional=The following standard structure makes it easier to compare and analyze entries. Please use the headings below as you prepare your method entry.
 method_description_placeholder=<h3>Definition</h3><h3>Problems and Purpose</h3><h3>History</h3><h3>Participant Selection</h3><h3>Deliberation, Decisions, and Public Interaction</h3><h3>Influence, Outcomes, and Effects</h3><h3>Analysis and Lessons Learned</h3><h3>Secondary Sources</h3><h3>External Links</h3><h3>Notes</h3>
 links_instructional_method=Add links to additional sources so that readers and editors can find more information about this method online.
@@ -1277,10 +1277,10 @@ links_instructional_org=If there is a main website for this organization, enter 
 links_placeholder_org=Add a link
 videos_instructional_org=Add a video link from Vimeo or YouTube.
 videos_placeholder_org=Add a video link (Vimeo or YouTube)
-brief_description_org_explanatory=Enter tweet-length (140 characters or less) description of this organization.
+description_org_explanatory=Enter tweet-length (140 characters or less) description of this organization.
 description_org_explanatory=Enter tweet-length (140 characters or less) description of this organization.
 org_description_placeholder=<h3>Mission and Purpose</h3><h3>History</h3><h3>Participant Selection</h3><h3>Specializations and Activities</h3><h3>Major projects and events</h3><h3>Funding</h3><h3>Publications</h3><h3>Secondary Sources</h3><h3>External Links</h3><h3>Notes</h3>
-brief_description_org_placeholder=Enter tweet-length organization description
+description_org_placeholder=Enter tweet-length organization description
 description_org_placeholder=Enter tweet-length organization description
 tags_title=Tags
 tags_placeholder=Enter one or more tags
