work in progress

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -569,7 +569,7 @@ time_limited_instructional=Did this case take place over a single, defined perio
 time_limited_placeholder=Was this time limited, or repeated?
 ##5. Purpose & Approach
 purpose_approach=Purpose/Goal
-purposes=Purposees
+purposes=Purposes
 purposes_instructional=Select and rank up to three purposes, with “1” indicating the most relevant.
 purposes_placeholder=Select & rank up to 3 purposes/goals
 approaches=Approaches
