make sure we're saving images correctly

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -686,10 +686,10 @@ end_date_instructional=Select an end date, if applicable
 end_date_placeholder=Select an end date, if applicable
 ongoing=Ongoing
 videos=Videos
-photos=Photos
+images=Photos
 files=Files
 files_instructional=Upload relevant documents here.
-photos_instructional=Select a photo from your device.
+images_instructional=Select a photo from your device.
 videos_instructional_case=Add a video link from Vimeo or YouTube.
 videos_instructional_method=Add a video link from Vimeo or YouTube.
 videos_placeholder_case=Add a video link (Vimeo or YouTube)
