created textwithheading.js for case details formatting

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -1542,48 +1542,50 @@ tags=Tags
 case_description_placeholder=<p>The following standard structure makes it easier to compare and analyze entries.</p><p>We recommend you use the headings below and refer to our guidelines as you prepare your case entry.</p><p>To view the guidelines, copy and paste this URL into your browser: <a href=https://goo.gl/V2SHQn>https://goo.gl/V2SHQn</a></p><p/><h3>Problems and Purpose</h3><p/><h3>History</h3><p/><h3>Originating Entities and Funding</h3><p/><h3>Participant Selection</h3><p/><h3>Methods and Tools Used</h3><p/><h3>Deliberation, Decisions, and Public Interaction</h3><p/><h3>Influence, Outcomes, and Effects</h3><p/><h3>Analysis and Lessons Learned</h3><p/><h3>Secondary Sources</h3><p/><h3>External Links</h3><p/><h3>Notes</h3><p/>
 searchmatched=This matched your search.
 featured_map=This is a featured item.
-#713
-facilitator_training=Facilitator Training
-volunteers=Volunteers
-images=Photos
-relationships=Your relationship to this case
-issues=General Issues
-specific_topics=Specific Topics
-links=Links
-tags=Tags
-has_components=Components of this case
-is_component_of=This case is a component of
-location=Primary location
-videos=Videos
-files=Files
-start_date=Start Date
-end_date=End Date
-time_limited=Time Limited or Repeated?
-purposes=Purposes
+#CaseDetails.js
 approaches=Approaches
-public_spectrum=Spectrum of Public Participation
-number_of_participant=Total number of Participants
-open_limited=Open to all or limited to some?
-recruitment_method=Recruitment method for limited subset of population
-targeted_participant=Targeted Participants (Demographics)
-process_methods=Methods
-legality=Legality
-facilitators=Facilitators
-participants_interactions=Type(s) of Interaction among participants
-learning_resources=Information and Learning Resources
+change_types=Types of Change
 decision_methods=Decision Method(s)
-if_voting=If Voting
-insights_outcomes=Outcomes
-primary_organizer=Organizers & Supporters
-organizer_types=Type of organizer/manager
+end_date=End Date
+evaluation_links=Evaluation Links
+evaluation_reports=Evaluation Reports
+facetoface_online_or_both=Face-to-face, online or both-en/msg.prop
+facilitator_training=Facilitator Training
+facilitators=Facilitators
+files=Files
+formal_evaluation=Formal Evaluation
 funder=funder
 funder_types=Type of Funder
-volunteer=Volunteers
-staff=Staff
+has_components=Components of this case
+if_voting=If Voting
+images=Photos
 impact_evidence=Evidence of Impact
-change_types=Types of Change
 implementers_of_change=Implementers of Change
-formal_evaluation=Formal Evaluation
-evaluation_reports=Evaluation Reports
-evaluation_links=Evaluation Links
+insights_outcomes=Outcomes
+is_component_of=This case is a component of
+issues=General Issues
+learning_resources=Information and Learning Resources
+legality=Legality
+links=Links
+location=Primary location
+number_of_participants= Total number of participants
+ongoing=Ongoing
+open_limited=Open to all or limited to some?
+organizer_types=Type of organizer/manager
+participants_interactions=Type(s) of Interaction among participants
+primary_organizer=Organizers & Supporters
+process_methods=Methods
+public_spectrum=Spectrum of Public Participation
+purposes=Purposes
+recruitment_method=Recruitment method for limited subset of population
+relationships=Your relationship to this case
+scope_of_influence=Scope of Influence
+specific_topics=Specific Topics
+staff=Staff
+start_date=Start Date
+tags=Tags
+targeted_participant=Targeted Participants (Demographics)
+time_limited=Time Limited or Repeated?
+videos=Videos
+volunteers=Volunteers
 
