fixed spacing issues for items in CaseDetails.js

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -1770,7 +1770,7 @@ decision_methods=Decision Method(s)
 end_date=End Date
 evaluation_links=Evaluation Links
 evaluation_reports=Evaluation Reports
-facetoface_online_or_both=Face-to-face, online or both-en/msg.prop
+facetoface_online_or_both=Face-to-face, online or both
 facilitator_training=Facilitator Training
 facilitators=Facilitators
 files=Files
