#713 pull request, updated locales

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -1938,11 +1938,11 @@ opinion_survey=Opinion Survey
 unknown=Unknown
 voting=Voting
 ###if_voting
-majoritarian_voting=Majoritarian Voting
-supermajoritarian=Super-Majoritarian
-plurality=Plurality
-preferential_voting=Preferential Voting
-unanimous_decision=Unanimous Decision
+majoritarian_voting=Majoritarian Voting (i.e., 50% +1)
+supermajoritarian=Super-Majoritarian (i.e., threshold more than 50% +1)
+plurality=Plurality (i.e., highest percentage wins, even if the proposal receives fewer than 50.1% votes)
+preferential_voting=Preferential Voting (i.e., ranked preferences)
+unanimous_decision=Unanimous Decision (i.e., full agreement by all participants)
 if_voting_unknown=Unknown (i.e., we don’t know how the vote was conducted)
 ###insights_outcomes
 artistic_expression=Artistic Expression
