--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -736,9 +736,9 @@ face_to_face_online_or_both=Face-to-face, online or both
 facetoface_online_or_both_instructional=Did participants interact face-to-face, online, or both?
 facetoface_online_or_both_placeholder=Was interaction face-to-face or online?
 facilitated=Facilitated
-interaction_modes=Type(s) of Interaction among Participants
-interaction_modes_instructional=Select and rank up to three of the most often used types of interaction
-interaction_modes_placeholder=Select & rank up to 3 types of interaction
+communication_modes=Type(s) of Interaction among Participants
+communication_modes=Select and rank up to three of the most often used types of interaction
+communication_modes=Select & rank up to 3 types of interaction
 governance_contribution=Governance Contribution
 governance_contribution_placeholder=Select governance contribution
 typical_funding_source=Typical funding source
